tests/sources/invalid/enums/enum_variant_arity_mismatch.fire
// Invalid: constructing a payload variant with the wrong number of arguments.
// EXPECT: parser error

enum Shape {
    Circle(radius: float64),
    Point
}

a: Shape = Shape.Circle(3.0, 4.0);  //~ ERROR FS-PARSE-0012 @18
b: Shape = Shape.Point(1);  //~ ERROR FS-PARSE-0012 @18
